# hyperqueue

./: .dockerignore  .flake8  .gitignore  .typos.toml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  index.html  mkdocs.yml  nedoc.conf  pytest.ini  ruff.toml  search.html  sitemap.xml  test.py  versions.json
crates/hyperqueue/: Cargo.toml
crates/hyperqueue/benches/: benchmark.rs
crates/hyperqueue/src/: lib.rs
crates/hyperqueue/src/client/: autoalloc.rs  globalsettings.rs  job.rs  mod.rs  resources.rs  server.rs  status.rs  task.rs  utils.rs
crates/hyperqueue/src/client/commands/: autoalloc.rs  data.rs  doc.rs  job.rs  jobs.rs  log.rs  mod.rs  notify.rs  outputlog.rs  reader.rs  server.rs  stop.rs  submit.rs  wait.rs  worker.rs
crates/hyperqueue/src/client/output/: cli.rs  common.rs  json.rs  mod.rs  outputs.rs  quiet.rs
crates/hyperqueue/src/common/: arraydef.rs  arrayparser.rs  cli.rs  controlflowutils.rs  env.rs  error.rs  format.rs  fsutils.rs  idcounter.rs  mod.rs  parser.rs  parser2.rs  placeholders.rs  rpc.rs  serialization.rs  serverdir.rs  setup.rs  strutils.rs  timeutils.rs  wrapped.rs
crates/hyperqueue/src/common/manager/: common.rs  info.rs  mod.rs  pbs.rs  slurm.rs
crates/hyperqueue/src/common/utils/: controlflow.rs  fs.rs  mod.rs  network.rs  str.rs  time.rs
crates/hyperqueue/src/dashboard/: events.rs  mod.rs  models.rs  root_screen.rs  start.rs  state.rs  ui_loop.rs  utils.rs
crates/hyperqueue/src/dashboard/data/: alloc_timeline.rs  data.rs  fetch.rs  job_timeline.rs  mod.rs  task_timeline.rs  tasks_timeline.rs  time_based_vec.rs  time_interval.rs  worker_count.rs  worker_timeline.rs
crates/hyperqueue/src/dashboard/ui/: mod.rs  screen.rs  styles.rs  terminal.rs
crates/hyperqueue/src/event/: events.rs  mod.rs  storage.rs
crates/hyperqueue/src/event/log/: mod.rs  read.rs  stream.rs  write.rs
crates/hyperqueue/src/events/: storage.rs
crates/hyperqueue/src/server/: backend.rs  bootstrap.rs  client.rs  job.rs  mod.rs  replay.rs  restore.rs  rpc.rs  state.rs  tako_events.rs  worker.rs
crates/hyperqueue/src/server/autoalloc/: config.rs  estimator.rs  mod.rs  process.rs  service.rs  state.rs
crates/hyperqueue/src/server/client/: autoalloc.rs  mod.rs  submit.rs
crates/hyperqueue/src/server/event/: events.rs  mod.rs  payload.rs  storage.rs  streamer.rs
crates/hyperqueue/src/stream/: mod.rs
crates/hyperqueue/src/stream/reader/: logfile.rs  mod.rs  outputlog.rs  streamdir.rs
crates/hyperqueue/src/stream/server/: control.rs  rpc.rs
crates/hyperqueue/src/tests/: mod.rs  resources.rs  server.rs  utils.rs
crates/hyperqueue/src/transfer/: connection.rs  messages.rs  mod.rs  protocol.rs  stream.rs
crates/hyperqueue/src/worker/: bootstrap.rs  hwdetect.rs  mod.rs  parser.rs  start.rs  streamer.rs
crates/hyperqueue/src/worker/start/: mod.rs  program.rs
crates/pyhq/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
crates/pyhq/pyhq/: Cargo.toml
crates/pyhq/pyhq/src/: lib.rs
crates/pyhq/pyhq/src/client/: mod.rs
crates/pyhq/pyhq/src/cluster/: mod.rs
crates/pyhq/pyhq/src/utils/: error.rs
crates/pyhq/python/hyperqueue/: __init__.py  client.py  common.py  job.py  output.py  task.py  utils.py  validation.py  visualization.py  wrapper.py
crates/pyhq/python/hyperqueue/cluster/: __init__.py
crates/pyhq/python/hyperqueue/ffi/: __init__.py  client.py  cluster.py  connection.py  ffi.py  protocol.py  utils.py
crates/pyhq/python/hyperqueue/task/: config.py  function.py  program.py  task.py
crates/pyhq/python/hyperqueue/utils/: package.py
crates/pyhq/python/pyhq/: client.py  job.py  task.py
crates/pyhq/python/pyhq/ffi/: ffi.py
crates/pyhq/src/: job.rs  lib.rs  marshal.rs  server.rs  utils.rs
crates/pyhq/src/client/: job.rs  server.rs
crates/pyhq/src/cluster/: mod.rs  server.rs  worker.rs
crates/pyhq/src/utils/: error.rs  mod.rs
crates/tako/: .gitignore  Cargo.toml  LICENSE  README.md
crates/tako/.github/workflows/: test.yml
crates/tako/benches/: benchmark.rs  core.rs
crates/tako/benches/benchmarks/: core.rs  mod.rs  scheduler.rs  worker.rs
crates/tako/benches/utils/: mod.rs
crates/tako/docs/: resource.md
crates/tako/python/: requirements.txt  setup.py
crates/tako/python/tako/client/: __init__.py  exception.py  program.py  resources.py  session.py  subworker.py  task.py
crates/tako/python/tako/common/: conn.py
crates/tako/src/: comm.rs  connection.rs  control.rs  events.rs  gateway.rs  hwstats.rs  launcher.rs  lib.rs  program.rs
crates/tako/src/common/: cycle_wrapped.rs  data.rs  data_structures.rs  error.rs  id_counter.rs  index.rs  macros.rs  mod.rs  resources.rs  rpc.rs  secret.rs  setup.rs  stablemap.rs  taskgroup.rs  trace.rs  wrapped.rs
crates/tako/src/common/resources/: allocation.rs  descriptor.rs  map.rs  mod.rs  request.rs
crates/tako/src/internal/: mod.rs
crates/tako/src/internal/common/: error.rs  (+10 more)
crates/tako/src/messages/: auth.rs  common.rs  gateway.rs  generic.rs  mod.rs  worker.rs
crates/tako/src/scheduler/: comm.rs  graph.rs  metrics.rs  mod.rs  multinode.rs  protocol.rs  scheduler.rs  state.rs  task.rs  test_scheduler.rs  test_util.rs  utils.rs  worker.rs
crates/tako/src/scheduler2/: metrics.rs  mod.rs  scheduler.rs  utils.rs
crates/tako/src/server/: client.rs  comm.rs  core.rs  gateway.rs  mod.rs  monitoring.rs  reactor.rs  rpc.rs  scheduler.rs  start.rs  system.rs  task.rs  taskmap.rs  test_util.rs  transfer.rs  worker.rs  worker_load.rs  workerload.rs  workermap.rs
crates/tako/src/tests/: mod.rs  test_reactor.rs  test_scheduler.rs  test_scheduler_mn.rs  test_scheduler_sn.rs  utils.rs
crates/tako/src/transfer/: auth.rs  fetch.rs  messages.rs  mod.rs  transport.rs
crates/tako/src/worker/: data.rs  hwmonitor.rs  launcher.rs  messages.rs  mod.rs  paths.rs  pool.rs  reactor.rs  rpc.rs  rqueue.rs  state.rs  subworker.rs  task.rs  taskenv.rs  taskmap.rs  test_util.rs
crates/tako/tests/: conftest.py  test_basic.py  test_monitoring.py  test_resources.py  test_secret.py  test_worker.py  test_workerlost.py
(+2303 files in other folders)
