[workspace]
members = [
    "crates/hyperqueue",
    "crates/tako",
    "crates/pyhq"
]
default-members = [
    "crates/hyperqueue",
    "crates/tako"
]

[workspace.package]
rust-version = "1.64.0"
edition = "2021"
authors = ["Stanislav Bohm <spirali@kreatrix.org>", "Jakub Beranek <berykubik@gmail.com>"]

[workspace.dependencies]
tokio = "1.20"
log = "0.4"
env_logger = "0.9"
clap = "3.2"
clap_complete = "3.2"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
bytes = "1"
chrono = "0.4"
orion = "0.17"
smallvec = "1"
bincode = "1.3"
futures = "0.3"
tokio-util = "0.7"
byteorder = "1.4"
rmp-serde = "1.0.0"
hex = "0.4"
rand = "0.8"
gethostname = "0.2"
thiserror = "1"
tempdir = "0.3"
tracing = "0.1"
anyhow = "1"
nix = "0.25"

[profile.release]
panic = "abort"

# Profile designed for the most optimized release build that is distributed
# to users.
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "debuginfo"
