[workspace]
members = [
    "crates/hyperqueue",
    "crates/tako",
    "crates/pyhq"
]
default-members = [
    "crates/hyperqueue",
    "crates/tako"
]
resolver = "2"

[workspace.package]
rust-version = "1.72.0"
edition = "2021"
authors = ["Ada Böhm <ada@kreatrix.org>", "Jakub Beránek <berykubik@gmail.com>"]

[workspace.dependencies]
tokio = "1.29"
log = "0.4"
env_logger = "0.10"
clap = "4"
clap_complete = "4"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
bytes = "1"
chrono = "0.4"
orion = "0.17"
smallvec = "1"
bincode = "1.3"
futures = "0.3"
tokio-util = "0.7"
byteorder = "1.4"
rmp-serde = "1"
hex = "0.4"
rand = "0.8"
gethostname = "0.4"
thiserror = "1"
tempdir = "0.3"
tracing = "0.1"
anyhow = "1"
nix = "0.26"
bstr = { version = "1.4", features = ["serde"] }

[profile.release]
panic = "abort"

# Profile designed for the most optimized release build that is distributed
# to users.
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
debug = "line-tables-only"
