[package]
name = "hyperqueue"
version = "0.14.0"
description = "Job execution system"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
rmp-serde = { workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
bytes = {workspace = true }
thiserror = { workspace = true }
gethostname = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
orion = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
anyhow = { workspace =  true }
tempdir = { workspace = true }
nix = { workspace = true }

humantime = "2.1.0"
num_cpus = "1.13.0"
cli-table = { version = "0.4.6", default-features = false }
atty = "0.2"
serde-tuple-vec-map = "1"
dirs = "4.0"
rmpv = { version = "1.0", features = ["with-serde"] }
nom = "7.1"
nom-supreme = { version = "0.8.0"}
bstr = { version = "0.2", features = ["serde1"] }
colored = "2"
byteorder = "1.4"
const_format = "0.2"
tui = { version = "0.17.0", default-features = false, features = ["termion"] }
termion = "1.5"
indicatif = "0.17"
textwrap = "0.15"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
flate2 = { version = "1", features = ["default"] }
psutil = "3.2"
chumsky = "0.8.0"
toml = "0.5"

# Tako
tako = { path = "../tako" }

# Optional dependencies
jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
derive_builder = "0.11"
insta = "1.15.0"
criterion = { version = "0.3", features = ["html_reports"] }

[features]
default = ["jemalloc"]
# Mode that does not execute tasks, useful for benchmarking HQ overhead
zero-worker = []
# Use the jemalloc allocator
jemalloc = ["jemallocator"]

[[bench]]
name = "benchmark"
harness = false

# Workaround for Criterion (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)
[lib]
bench = false
