[package]
name = "pyhq"
version = "0.12.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hyperqueue"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
hyperqueue = { path = "../hyperqueue" }
tako = { path = "../tako" }

serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tempdir = { workspace = true }

pyo3 = { version = "0.15", features = ["extension-module", "abi3", "abi3-py36", "anyhow", "serde"] }
pyo3-asyncio = { version = "0.15", features = ["tokio-runtime", "attributes"] }
dict_derive = "0.4.0"
pythonize = "0.15"
termcolor = "1.1"

[package.metadata.maturin]
python-source = "python"
