[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "hyperqueue"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
requires-python = ">=3.6"
description = "HyperQueue Python API"
dependencies = [
    "cloudpickle==2.0",
    "tqdm>=4.60,<5"
]

[project.optional-dependencies]
all = [
    "pydot==1.4.2"
]
