[build-system]
requires = ["maturin>=1.3,<2"]
build-backend = "maturin"

[project]
name = "hyperqueue"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
requires-python = ">=3.9"
description = "HyperQueue Python API"
dependencies = [
    "cloudpickle>=2.0,<3",
    "tqdm>=4.60,<5"
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "pydot>=1.4,<2"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
