[package]
name = "tako"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
bytes = { workspace = true }
byteorder = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
orion = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
gethostname = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
bstr = { workspace = true }
psutil = { workspace = true }

hashbrown = { version = "0.14", features = ["serde", "inline-more"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["json"] }
priority-queue = "1"
bitflags = "2"
fxhash = "0.2"
thin-vec = "0.2"
derive_more = "0.99"

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
tempdir = { workspace = true }
derive_builder = "0.11"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

# Workaround for Criterion (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)
[lib]
bench = false
